--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -4,12 +4,14 @@
   text-align: center;
   letter-spacing: 0.5px;
   line-height: 2em;
-  font-size: 16px;
   word-spacing: 2px;
 
   @include mobile {
-    font-size: 75%;
-    margin: 20px 20px;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    
+    margin: 100px 20px;
   }
 }
 
